# serializer version: 1
# name: test_mention_for_inactive_user
  '<p>this <span misago-mention="inactive-user" class="rich-text-mention-not-found">@Inactive_User</span> is inactive</p>'
# ---
# name: test_mention_for_not_found_user
  '<p>this <span misago-mention="user" class="rich-text-mention-not-found">@User</span> doesn’t exist</p>'
# ---
